--- a/javaServer/src/main/resources/application.properties
+++ b/javaServer/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=javaServer
 server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/paloma
+spring.datasource.username=root
+spring.datasource.password=Pianomonkey#2204
+
+# JPA (Hibernate) Config
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
