--- a/javaServer/src/main/resources/application.properties
+++ b/javaServer/src/main/resources/application.properties
@@ -1,11 +1,25 @@
+# JDBC Connection
 spring.application.name=javaServer
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/paloma
+spring.datasource.url=jdbc:mysql://localhost:3306/paloma?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Pianomonkey#2204
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA (Hibernate) Config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# Hikari Connection Pool
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.max-lifetime=1200000
+spring.datasource.hikari.auto-commit=false
+spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
+
+logging.level.com.zaxxer.hikari=DEBUG
+
+debug=true
