--- a/javaServer/src/main/resources/application.properties
+++ b/javaServer/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
 logging.level.com.zaxxer.hikari=DEBUG
 
 debug=true
+
+jwt.secret = zIrdULXnyhZ4daFTvrbWNcgky1eAdhY+pn2hhzytBvI
