--- a/javaServer/src/main/resources/application.properties
+++ b/javaServer/src/main/resources/application.properties
@@ -20,6 +20,9 @@ spring.datasource.hikari.max-lifetime=1200000
 spring.datasource.hikari.auto-commit=false
 spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
 
+spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.add-mappings=true
+spring.mvc.static-path-pattern=/**
 
 
 jwt.secret = zIrdULXnyhZ4daFTvrbWNcgky1eAdhY+pn2hhzytBvI
