--- a/javaServer/src/main/resources/application.properties
+++ b/javaServer/src/main/resources/application.properties
@@ -24,5 +24,22 @@ spring.web.resources.static-locations=classpath:/static/
 spring.web.resources.add-mappings=true
 spring.mvc.static-path-pattern=/**
 
-
+# JWT Configuration
 jwt.secret = zIrdULXnyhZ4daFTvrbWNcgky1eAdhY+pn2hhzytBvI
+
+# Email Configuration (Replace with actual values in production)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your-email@gmail.com
+spring.mail.password=your-app-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# Twilio SMS Configuration (Replace with actual values in production)
+twilio.account.sid=your-account-sid
+twilio.auth.token=your-auth-token
+twilio.phone.number=your-twilio-phone-number
