got email invitations to work and added success messeges to some endpoints

--- a/javaServer/src/main/resources/application.properties
+++ b/javaServer/src/main/resources/application.properties
@@ -30,8 +30,8 @@ jwt.secret = zIrdULXnyhZ4daFTvrbWNcgky1eAdhY+pn2hhzytBvI
 # Email Configuration (Replace with actual values in production)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-email@gmail.com
-spring.mail.password=your-app-password
+spring.mail.username=mentalhealthpaloma@gmail.com
+spring.mail.password=gnju mboi jfhc hqkp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -40,6 +40,6 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Twilio SMS Configuration (Replace with actual values in production)
-twilio.account.sid=your-account-sid
-twilio.auth.token=your-auth-token
-twilio.phone.number=your-twilio-phone-number
+twilio.account.sid=ACf2f445e73c4cfd14cb4bc793e4a51945
+twilio.auth.token=f2e30283268c691a203c320e142c99e9
+twilio.phone.number=+19786725662
